Fix separator dots style overflow

--- a/assets/css/base/gutenberg-blocks.scss
+++ b/assets/css/base/gutenberg-blocks.scss
@@ -503,6 +503,7 @@
 	.wp-block-separator {
 		border: 0;
 		margin: 0 auto ms(2);
+		overflow: hidden;
 
 		&:not( .is-style-wide ):not( .is-style-dots ) {
 			max-width: 10%;
